diss: ip - general idea

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -99,3 +99,29 @@
     Volume = {1},
     Year = {2006},
 }
+
+@ARTICLE{2009:hampel,
+  author = {Hampel, F.},
+  title = {Nonadditive Probabilities in Statistics},
+  journal = {Journal of Statistical Theory and Practice},
+  year = {2009},
+  volume = {3},
+  pages = {11-23},
+}
+
+@BOOK{2001:weichselberger,
+  title = {{Elementare Grundbegriffe einer allgemeineren Wahrscheinlichkeitsrechnung
+  I: Intervallwahrscheinlichkeit als umfassendes Konzept}},
+  publisher = {Physica, Heidelberg},
+  year = {2001},
+  author = {Weichselberger, K.}
+}
+
+@ARTICLE{2000:walley::towards,
+  author = {Walley, P.},
+  title = {Towards a unified theory of imprecise probability},
+  journal = {International Journal of Approximate Reasoning},
+  year = {2000},
+  volume = {24},
+  pages = {125--148}
+}
