--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -180,3 +180,45 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   pages = {773--795},
 }
 
+    @article{2005:hsu-bhatt,
+     title = {Neural Systems Responding to Degrees of Uncertainty in Human Decision-Making},
+     author = {Hsu, Ming and Bhatt, Meghana and Adolphs, Ralph and Tranel, Daniel and Camerer, Colin F.},
+     journal = {Science},
+     volume = {310},
+     number = {5754},
+     series = {New Series},
+     jstor_formatteddate = {Dec. 9, 2005},
+     pages = {pp. 1680-1683},
+     url = {http://www.jstor.org/stable/3842970},
+     ISSN = {00368075},
+     year = {2005},
+     publisher = {American Association for the Advancement of Science},
+    }
+
+@book{1997:denneberg,
+   author={Denneberg, Dieter},
+   title={Non-additive measure and integral},
+   year={1997},
+   ISBN={0-7923-2840-X},
+   publisher={Kluver Academic Publishers},
+   address={Dordrecht, NL},
+}
+
+@article{1987:lindley,
+  author = {Dennis V. Lindley},
+  title = {The Probability Approach to the Treatment of Uncertainty in Artificial Intelligence and Expert Systems},
+  journal = {Statistical Science},
+  year = {1987},
+  volume = {2},
+  number = {1},
+  pages = {17--24},
+}
+
+@ARTICLE{1996:walley::expert,
+  author = {Walley, P.},
+  title = {Measures of uncertainty in expert systems},
+  journal = {Artificial Intelligence},
+  year = {1996},
+  volume = {83},
+  pages = {1--58}
+}
