--- a/defs.tex
+++ b/defs.tex
@@ -5,6 +5,7 @@
 \def\pdc{prior-data conflict}
 
 \def\tra{\ensuremath{{\mbox{\!\scriptsize\textsf{T}}}}}
+\def\com{\ensuremath{{\mbox{\!\scriptsize\textsf{C}}}}}
 
 \newcommand{\reals}{\mathbb{R}}
 
