diss: exposition Weichselberger and Walley

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -109,12 +109,42 @@
   pages = {11-23},
 }
 
+@ARTICLE{2000:weichselberger,
+  author = {Weichselberger, K.},
+  title = {The theory of interval probability as a unifying model for uncertainty},
+  journal = {International Journal of Approximate Reasoning},
+  year = {2000},
+  volume = {24},
+  pages = {149--170}
+}
+
 @BOOK{2001:weichselberger,
   title = {{Elementare Grundbegriffe einer allgemeineren Wahrscheinlichkeitsrechnung
   I: Intervallwahrscheinlichkeit als umfassendes Konzept}},
   publisher = {Physica, Heidelberg},
   year = {2001},
   author = {Weichselberger, K.}
+}
+
+@BOOK{2013:weichselberger,
+  title = {{Elementare Grund\-begriffe einer allgemeineren Wahr\-schein\-lich\-keits\-rechnung
+  II. Symmetrische Wahr\-schein\-lich\-keits\-theorie}},
+  year = {2013},
+  author = {Weichselberger, K.},
+  note = {In preparation.},
+  date-added = {2012-08-09 20:42:24 +0000},
+  date-modified = {2012-08-09 20:42:24 +0000}
+}
+
+@INPROCEEDINGS{2007:weichselberger,
+  author = {Weichselberger, K.},
+  title = {The logical concept of probability: {F}oundation and interpretation},
+  booktitle = {ISIPTA '07: Proceedings of the Fifth International Symposium on Imprecise
+  Probability: Theories and Applications},
+  year = {2007},
+  editor = {de Cooman, G. and Vejnarov{\'{a}}, J. and Zaffalon, M.},
+  address = {Prague},
+  publisher = {Action M Agency for SIPTA}
 }
 
 @ARTICLE{2000:walley::towards,
@@ -124,4 +154,50 @@
   year = {2000},
   volume = {24},
   pages = {125--148}
+}
+
+@BOOK{1933:kolmogorov,
+  title = {Grundbegriffe der Wahr\-schein\-lich\-keits\-rechnung},
+  publisher = {Springer},
+  year = {1933},
+  author = {Kolmogorov, A.},
+  address = {Berlin},
+  note = {English translation: \emph{Foundations of Probability}, Chelsea,
+  Providence, RI, 1950}
+}
+
+@BOOK{19745:finetti,
+  title = {Theory of Probability: A Critical Introductory Treatment},
+  publisher = {John Wiley \& Sons},
+  year = {1974--1975},
+  author = {{d}e Finetti, B.},
+  address = {Chichester},
+  note = {{E}nglish translation of \cite{1970:finetti}}
+}
+
+@BOOK{1970:finetti,
+  title = {Teoria delle Probabilit\`a},
+  publisher = {Einaudi},
+  year = {1970},
+  author = {{d}e Finetti, B.},
+  address = {Turin}
+}
+
+@ARTICLE{1937:finetti,
+  author = {{d}e Finetti, B.},
+  title = {La pr\'evision: {S}es lois logiques, ses sources subjectives},
+  journal = {Annales de l'Institut Henri Poincar\'e},
+  year = {1937},
+  volume = {7},
+  pages = {1--68},
+  note = {{E}nglish translation in \cite{1964:kyburg}}
+}
+
+@BOOK{1964:kyburg,
+  title = {Studies in Subjective Probability},
+  publisher = {Wiley},
+  year = {1964},
+  editor = {Kyburg Jr., H. and Smokler, H.},
+  address = {New York},
+  note = {Second edition (with new material) 1980}
 }
