--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -31,7 +31,7 @@ Section ****
 This Section will give a condensed introduction to the main theoretic concepts
 in interval or imprecise probability as needed for the topics discussed in this thesis.
 
-While Section~\ref{sec:ip-general} follows mostly ***IESS -- Imprecise probability***,
+While Section~\ref{sec:ip-general} follows mostly \textcite{2011:IESS-ip},
 Section~\ref{sec:ip-main} is based mainly on \textcite{1996:walley::expert} and \textcite{2000:walley::towards}.
 
 
@@ -41,9 +41,13 @@ Section~\ref{sec:ip-main} is based mainly on \textcite{1996:walley::expert} and 
 The central idea of imprecise or interval probability \parencite{2011:IESS-ip, 1991:walley, 2001:weichselberger} is
 to replace the usual, precise probability measure $P(A)$ for events $A$%
 \footnote{Events of interest $A$ are taken to be subsets of the sample space $\Omega$,
-forming a $\sigma$-algebra, which is non-empty and includes countable unions and intersections of subsets of $\Omega$.}
+forming a $\sigma$-algebra, a non-empty collection of sets including countable unions and intersections of subsets of $\Omega$.}
 with a \emph{lower} and \emph{upper probability}, denoted by $\Pl(A)$ and $\Pu(A)$, respectively,
-satisfying $0 \le \Pl(A) \le \Pu(A) \le 1$.
+satisfying
+\begin{equation}
+\label{eq:0ip1}
+0 \le \Pl(A) \le \Pu(A) \le 1\,.
+\end{equation}
 In this setting, a usual probability measure forms the extreme case $\Pl(A) = \Pu(A) = \p(A)$,
 when there is enough information to determine the distribution on the sample space $\Omega$
 in precise stochastic terms.
@@ -59,12 +63,14 @@ imprecise probability measures can account for cases where there is uncertainty 
 just like in a lottery where the number of winning tickets is not exactly known.
 Non-stochastic uncertainty about model features like probabilities is often called \emph{ambiguity},
 forming a crucial part of the human decision process,
-and there are studies suggesting that humans process ambiguity in a different way
-as compared to pure probabilistic reasoning \parencite{2005:hsu-bhatt}.
+and there are studies suggesting that humans process ambiguity in a way
+differing from pure probabilistic reasoning \parencite{2005:hsu-bhatt}.
 
 In contrast to a probability measure $\p(A)$,
 the set functions $\Pl(A)$ and $\Pu(A)$ do not adhere
-to the additivity axiom (countable or finite additivity),
+to the additivity axiom of Kolmogorov's \parencite*{1933:kolmogorov}
+formalization of probability as a normed measure,
+%(countable or finite additivity),
 and thus are also known as \emph{non-additive probabilities}.
 There is also a link to \emph{fuzzy measures}, which are also non-additive measures
 \parencite[see, e.g.,][]{1997:denneberg}.
@@ -79,22 +85,59 @@ it is mostly assumed that $\Pl(A^\com) = 1 - \Pu(A)$,
 and thus it suffices to determine either of $\Pl$ or $\Pu$,
 the other one being defined through this relation.
 
-Although strictly negated by advocates of Bayesian methods \parencite[e.g., by][]{1987:lindley},
-the need to go beyond usual probability measures has been recognized for a long time,%
-\footnote{\textcite{2009:hampel} and \textcite[Section~1]{2001:weichselberger} give a historical overview on the development of
-ideas related to non-additive measures and interval probability.}
-and in recent times most prominently by scientists involved in the development of expert systems.
-
-
-main monographs: Weichselberger (axiomatic), Walley (subjective Bayesian)
+There are currently two main approaches to a general theory of statistical inference with interval or imprecise probability:
+\begin{enumerate}[(i)]
+\item The theory by \textcite{2000:weichselberger, 2001:weichselberger}
+regards probability intervals $[\Pl(A), \Pu(A)]$ for all or some events $A$ as the basic entity
+\parencite[p.~646]{2011:IESS-ip},
+from which an interval-valued distribution on the sample space $\Omega$ is constructed.
+His approach is axiomatic, in the sense that it replaces the additivity axiom by two axioms,%
+\footnote{The first states that \eqref{eq:0ip1} holds,
+the second that the set $\mathcal{M}$ consisting of usual, precise distributions $\p(\cdot)$
+with $\Pl(A) \le \p(A) \le \Pu(A)$, for all $A \in \Omega$, must be non-empty.
+The second axiom guarantees that there exists at least one precise probability distribution
+which is compatible with an interval-valued probability distribution,
+and thus rules out the case of contradictory assignments of $[\Pl(A), \Pu(A)]$.
+}
+from which the theory is derived,
+while imposing no specific interpretation on these constructs.
+This theory of interval probability was developed
+as the foundation of a concept of \emph{logical probability} \parencite{2007:weichselberger},
+where probability is not assigned to events, but to logical conclusions (from a premise to a consequence),
+with the aim to arrive at a theory of statistical inference
+which allows for fiducial-like probability statements,
+e.g., probability statements on parameters similar to a posterior distribution in a Bayesian setting
+without the need to specify a prior distribution \parencite{2011:IESS-fiducial}***.
+\item In contrast, the theory by Walley \parencite*{1991:walley, 2000:walley::towards}
+aims to generalise the Bayesian approach to statistical inference,
+adopting a strictly subjective interpretation for imprecise probability
+as lower and upper betting rates (see below),
+and extending the Bayesian paradigm (as discussed in Section~\ref{sec:bayes-inference})
+to imprecise probability distributions.
+In generalising de Finetti \parencite*{1937:finetti,1970:finetti}, the basic entities are lower and upper \emph{previsions},
+i.e.\ expectation functionals, for \emph{gambles}, i.e.\ random variables,
+instead of lower and upper probabilities for events.
+This is due to the fact that unlike in precise probability theory%
+---where the definition of a distribution via precise previsions
+(often denoted \emph{linear previsions} in the imprecise probability literature)
+is eqivalent to a definition via precise probability distributions---%
+the definition of an imprecise distribution via lower and upper previsions
+is more general than a definition via lower and upper probability for events
+\parencite[p.~132]{2000:walley::towards}.
+\end{enumerate}
+As this thesis is concerned with a generalization of Bayesian inference
+based on sets of conjugate priors, the approach by Walley,
+and its reliance on a subjective interpretation of (imprecise) probability
+as (bounds for) betting rates, is now described in more detail.***
 
 \subsection{Main Formulations}
 \label{sec:ip-main}
 
 lower and upper probabilities or expectations,
 link to sets of probability distributions,
-sets of desirable gambles as mathematical formulation
-
+sets of desirable gambles as mathematical formulation,
+lower and upper betting rates,
+inference procedure (itip)
 
 \subsection{Related Concepts}
 
@@ -103,6 +146,14 @@ like possibilistic reasoning, fuzzy probabilities, etc.
 
 
 \section{***Motivations for IP}
+
+Although strictly negated by advocates of Bayesian methods \parencite[e.g., by][]{1987:lindley},
+the need to go beyond usual probability measures has been recognized for a long time,%
+\footnote{\textcite{2009:hampel} and \textcite[Section~1]{2001:weichselberger} give a historical overview on the development of
+ideas related to non-additive measures and interval probability.}
+and in recent times most prominently by scientists involved in the development of expert systems.
+
+***klir citation (festschrift)***
 
 \subsection{\pdc }
 
