diss: iess refs, notation \p and small stuff

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -197,7 +197,7 @@
   title = {Studies in Subjective Probability},
   publisher = {Wiley},
   year = {1964},
-  editor = {Kyburg Jr., H. and Smokler, H.},
+  editor = {{Kyburg Jr.}, H. and Smokler, H.},
   address = {New York},
   note = {Second edition (with new material) 1980}
 }
