--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -222,3 +222,23 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   volume = {83},
   pages = {1--58}
 }
+
+@inreference{2011:IESS-ip,
+  author = {Frank P.A. Coolen and Matthias M.C. Troffaes and Thomas Augustin},
+  title = {Imprecise Probability},
+  editor = {Lovric, Miodrag},
+  booktitle = {International Encyclopedia of Statistical Science},
+  year = {2011},
+  address={Berlin},
+  publisher={Springer},
+}
+
+@inreference{2011:IESS-fiducial,
+  author = {Jan Hannig and Hari Yver and Thomas C.M. Lee},
+  title = {Fiducial Inference},
+  editor = {Lovric, Miodrag},
+  booktitle = {International Encyclopedia of Statistical Science},
+  year = {2011},
+  address={Berlin},
+  publisher={Springer},
+}
