--- a/defs.tex
+++ b/defs.tex
@@ -64,6 +64,7 @@
 \def\MZ{\mathcal{M}\uz}
 \def\MN{\mathcal{M}\un}
 
+\newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
 \newcommand{\E}{\operatorname{E}}
 \newcommand{\V}{\operatorname{Var}}
