--- a/intro.tex
+++ b/intro.tex
@@ -55,6 +55,9 @@ In the Bayesian setting, prior/posterior probability distributions (on parameter
 while sample models (distributions on observable quantities) are denoted by lowercase letter $f$:
 $f(x)$, $p(\theta)$.
 
+Cumulative distribution functions are denoted by uppercase letter $\cdf$: $\cdf(x) := \int_{-\inf}^x f(u) \dd u$;
+probability measures for subsets $A$ of a sample space $\Omega$ are denoted by uppercase $\p$, i.e.\ $\p(A) = \int_A f(u) \dd u$.
+
 Expectation and variance of a random quantity $X$ are denoted by $\E[X]$ and $\V(X)$, respectively.
 In a Bayesian setting, quantities identifying the distribution
 with respect to which expectation and variance are calculated
@@ -509,7 +512,7 @@ consists of a single element of the parameter space only (usually, $\Theta_0 = \
 \footnote{Such a testing problem is often called \emph{two-sided} in Neyman-Pearson testing.}
 require a special treatment if the prior on $\Theta$ is absolutely continuous,
 as is the case for the priors \eqref{eq:canonicalprior} considered here,
-because then, $P(\theta \in \Theta_0) = 0$ for any $\theta_0$.
+because then, $\p(\theta \in \Theta_0) = 0$ for any $\theta_0$.
 Such an inference task is considered in terms of a problem of \emph{model selection},
 where $\theta = \theta_0$ vs.\ $\theta \neq \theta_0$ decides between two different statistical models,
 to each of which a prior probability is assigned \parencite[\S 5.2.4]{2007:robert}.
