diss: small rephrasings in last commit

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -154,25 +154,25 @@ his papers and the imprecise probability literature in general,
 lower previsions are usually denoted by $\Pl$.
 There, an event $A \subset \Omega$ is notationally identified with the
 indicator function $I_A(\omega)$, being a gamble with payout $1$ if $\omega \in A$ and else $0$,
-so $\Pl(A)$ denotes also the lower probability of $A$.
+such that $\Pl(A)$ denotes the lower probability of $A$.
 In order to follow conventions in statistical literature, however,
 lower previsions are denoted by $\El$ here,
 and $\Pl$ refers to lower probabilities only.}
 Central to Walley's theory is the interpretation of $\El[X]$
 as the subject's supremum buying price for $X$, that is,
 the subject is disposed to pay at most the fixed amount $\El[X]$
-in exchange for the uncetain reward $X$.
+in exchange for the uncertain reward $X$.
 $\El[X]$ thus expresses the subject's state of knowledge about the value of $X$,
-factoring in the propensity of specific payouts $X(\omega)$
-for all possible $\omega \in \Omega$.
+factoring in the propensity of all possible $\omega \in \Omega$
+with their specific payouts $X(\omega)$.
 The \emph{upper prevision} $\Eu[X]$ is the infimum selling price for $X$,
 i.e., the fixed amount the subject is willing to receive in exchange for $X$
 \parencite[p.~9]{1996:walley::expert}.
-The theory allows thus a zone of indeterminacy, $\big[\El[X], \Eu[X]\big]$,
-for prices of $X$ at which the subject is neither willing to buy or to sell $X$.
+The theory allows thus a zone of indeterminacy, by $\El[X] < \Eu[X]$,
+for prices of $X$ at which the subject is neither willing to buy or to sell the gamble $X$.
 This is in contrast to the usual epistemic operationalisation of subjective Bayesian probability,
 which implies that $\El[X]$ and $\Eu[X]$ must coincide at a unique fair price $\E[X]$.
-Walley calls this assumption the \emph{Bayesian dogma of (ideal) precision}
+This requirement is refuted by Walley, and called by him as the \emph{Bayesian dogma of (ideal) precision}
 \parencite[Chapter~5]{1991:walley}.
 
 conjugacy
