diss: conjugacy, avoidung sure loss, figure for El and Eu

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -131,3 +131,11 @@
     note      = "In preparation",
     editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
+
+@incollection{itip,
+    title = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
