--- a/head.tex
+++ b/head.tex
@@ -23,6 +23,8 @@
 \usepackage{amssymb}
 \usepackage{bm}
 
+\usepackage{tikz}
+\usetikzlibrary{calc,decorations.pathreplacing,shapes,positioning,arrows}
 
 \usepackage[bookmarks]{hyperref}
 
