diss: writing out the notation, small corrections

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -224,8 +224,8 @@ linkline/.style={
 \draw[linkline] (sell) -- (8,0.3);
 \end{tikzpicture}
 \caption{\label{fig:pricesforgambles}%
-Illustration of \underline{E} %$\El$ %strange errors occur
-and $\Eu$ as supreme buying and infimum selling prices for a gamble $X$ on a linear utility scale.}
+Illustration of \underline{E}\ and $\Eu$ as supreme buying and infimum selling prices for a gamble $X$ on a linear utility scale.}
+%$\El$ %strange errors occur
 \end{figure}
 
 A lower and upper prevision are called \emph{conjugate}%
